<resources>
    <string name="app_name">KotlinPlayground</string>
    <string name="hello">Hello!</string>
    <string name="button_string">New Button</string>
    <string name="text_test">Text Test</string>
    <string name="bold_text">Bold Text</string>
    <string name="views_activity">Views Activity</string>
    <string name="click_the_tiger">Дотокнісь до тигра</string>
    <string name="kus">Кусь!!!</string>
    <string name="purr">Мууррр...</string>
    <string name="road_tiger_danger">Road (Tiger) [Danger!]</string>
    <string name="math_test">Math Test</string>
    <string name="_000">000</string>
    <string name="can_you">Can you find all dividers? Their number is less then 11 and they are in range of 2..51
    </string>
    <string name="number_is_prime">Number is prime</string>
    <string name="submit_divider">Submit divider</string>
    <string name="well_done">Well Done!</string>
    <string name="ok">OK</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="list_view">List View</string>
    <string name="textview">TextView</string>
</resources>
