<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <Button
                android:text="@string/text_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonTextTest"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:text="@string/views_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonViewsActivity" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonTextTest" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:text="@string/road_tiger_danger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRoarActivity" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonViewsActivity"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:text="@string/math_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMathTest" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonRoarActivity"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:text="@string/check_for_updates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCheckForUpdates" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonListView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintVertical_bias="1.0"/>
        <Button
                android:text="@string/list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonListView" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonMathTest"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="1.0"
                style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>