<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MathActivity">

    <TextView
            android:text="@string/_000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mathActivityNumber" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textStyle="bold" android:textAlignment="textEnd" android:textColor="@android:color/black"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/can_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="14sp" android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mathActivityInputField" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mathActivityNumber" android:textAlignment="textEnd"/>
    <Button
            android:text="@string/number_is_prime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mathActivityPrimeNumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mathActivityInputField"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/submit_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mathActivitySubmit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mathActivityPrimeNumber"
            style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>