<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".TextTest">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
                android:text="@string/textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/helloTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#212121"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"/>
        <Button
                android:text="@string/button_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/helloTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <CheckBox
                android:text="@string/bold_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/strangeText"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:textSize="20sp" android:textColor="@android:color/black"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>